--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 }
 
 
+
 * {	
 	box-sizing: border-box;
 }
@@ -28,75 +29,84 @@ html, body {
 	height: 100%;
 }
 
-
 .content {
 	display: flex;
 	justify-content: center; /* center horizontally */
 	align-items: center; /* center vertically */
-	height: 100%;
-	
+	height: 100%;	
 }
 
 .main-view {
-	width: 270px;
+	width: 260px;
 	height: 400px;
 	background-color: var(--primary-white);
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
+	border-radius: 20px;
 }
 
 .image-container {
 	width: 100%;
 	height: 60%;
-	margin: 20px 0;
-	padding: 0 10px;
+	margin-bottom: 20px;
+	padding: 0 15px;
 }
 
 img {
 	width: 100%;
 	height: 100%;
-	object-fit: scale-down;
+	object-fit: cover;
+	border-radius: 10px;
 }
 
 .text {
 	width: 100%;
-	padding: 0 20px;
+	padding: 0 15px;
 	color: var(--secondary-slate);
-/*	margin: 0 20px;*/
 }
 
-
 .text h1 {
-	font-weight: 700;
 	font-size: 15px;
+	font-weight: 700;
 	text-align: center;
 	color: var(--tertiary-slate);
-	margin: 0 10px;
+	margin: 0 15px;
 }
 
 .text p {
+	font-size: 12px;
 	font-weight: 400;
-	font-size: 15px;
 	text-align: center;
-	margin: 10px 10px;
+	margin: 15px 15px;
 }
-
 
 .attribution { 
 	display: flex;
 	align-items: flex-end;
 	font-size: 11px; 
 	text-align: center; 
+	margin: 0 20px;
 }
 
 .attribution a { 
 	color: hsl(228, 45%, 44%); 
 }
 
-/* Media Queries */
 
 @media (min-width: 375px) and (max-width: 1440px) {
-/* Rules go here */
+	body {
+		font-size: 15px;
+	}
+
 }
+
+
+
+
+
+
+
+
+
 
